# continuum

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-pages.yml  fuzz.yml  pypi-publish.yml  release.yml
bindings/pybind/: _continuum.cpp  bind_backend.cpp  bind_ir.cpp  bind_runtime.cpp
docs/: abi.md  architecture.md  cache.md  ir-spec.md  runtime-spec.md  runtime.md
docs/api/: README.md
docs/api/python/: conf.py  index.rst
docs/api/python/_build/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/python/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/api/python/_build/_modules/: continuum.html  index.html
docs/api/python/_build/_modules/continuum/frontend/: optimizer.html  param.html
docs/api/python/_build/_modules/continuum/nn/: module.html
docs/api/python/_build/_modules/continuum/programs/: program.html
docs/api/python/_build/_sources/: index.rst.txt  modules.rst.txt
docs/release/: v1-readiness.md
examples/: 01_research_agent.py  02_deterministic_m1.py  02_train_classifier.py  03_transformer_from_scratch.py  04_m2_benchmark_validation.py
include/continuum/: continuum.hpp
include/continuum/backend/: anthropic.hpp  azure_openai.hpp  backend.hpp  backend_abi.h  fake_llm.hpp  libtorch.hpp  mlx_backend.hpp  openai.hpp  vllm_shim.hpp
include/continuum/compiler/: rewrite.hpp  typecheck.hpp
include/continuum/ir/: effect.hpp  graph.hpp  node.hpp  type.hpp  value.hpp
include/continuum/runtime/: cache.hpp  checkpoint.hpp  interpreter.hpp  scheduler.hpp  session.hpp
include/continuum/utils/: logging.hpp
paper/: paper_continuum.tex
python/continuum/: __init__.py  _native.py
python/continuum/benchmarks/: __init__.py  m2_validation.py
python/continuum/frontend/: optimizer.py  param.py  trace.py
python/continuum/nn/: __init__.py  module.py
python/continuum/programs/: program.py
schema/: cir.fbs
scripts/: bench.sh  build.sh
scripts/benchmarks/: run_examples.py  validate_outputs.py
src/backend/: anthropic.cpp  azure_openai.cpp  backend.cpp  backend_abi_adapter.cpp  fake_llm.cpp  libtorch.cpp  mlx_backend.cpp  openai.cpp  vllm_shim.cpp
src/compiler/: rewrite.cpp  typecheck.cpp
src/ir/: effect.cpp  graph.cpp  node.cpp  type.cpp
src/runtime/: cache.cpp  checkpoint.cpp  interpreter.cpp  scheduler.cpp  session.cpp
src/utils/: logging.cpp
tests/bench/: test_cache_bench.py
tests/cpp/: CMakeLists.txt  smoke.cpp  test_graph.cpp
tests/data/golden/: 03_transformer_from_scratch.txt
tests/python/: test_api_surface.py  test_examples_golden.py  test_fuzz_deserialize.py  test_m2_benchmark_validation.py  test_module.py  test_optimizer_dispatch.py  test_program.py
